--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,4 +1,5 @@
 // Navigation code here
+
 .nav-container {
     display: flex;
     font-family: @nav-font;
@@ -22,5 +23,9 @@
     h1 {
         font-size: 4.5rem;
         padding-bottom: 10px;
+    }
+
+    @media @phone {
+        min-width: 100%;
     }
 }
